; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_tick.c_tick_ticker.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_tick.c_tick_ticker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@counter_upper = common dso_local global i32 0, align 4
@counter_lower_last = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @tick_ticker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tick_ticker() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = call i32 (...) @critical_enter()
  br label %6

6:                                                ; preds = %11, %0
  %7 = load i32, i32* @counter_upper, align 4
  %8 = call i64 @DPCPU_GET(i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i32, i32* @counter_lower_last, align 4
  %10 = call i64 @DPCPU_GET(i32 %9)
  store i64 %10, i64* %3, align 8
  br label %11

11:                                               ; preds = %6
  %12 = load i64, i64* %4, align 8
  %13 = load i32, i32* @counter_upper, align 4
  %14 = call i64 @DPCPU_GET(i32 %13)
  %15 = icmp ne i64 %12, %14
  br i1 %15, label %6, label %16

16:                                               ; preds = %11
  %17 = call i64 (...) @mips_rd_count()
  store i64 %17, i64* %2, align 8
  %18 = call i32 (...) @critical_exit()
  %19 = load i64, i64* %2, align 8
  %20 = load i64, i64* %3, align 8
  %21 = icmp slt i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = load i64, i64* %4, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %4, align 8
  br label %25

25:                                               ; preds = %22, %16
  %26 = load i64, i64* %4, align 8
  %27 = trunc i64 %26 to i32
  %28 = shl i32 %27, 32
  %29 = sext i32 %28 to i64
  %30 = load i64, i64* %2, align 8
  %31 = or i64 %29, %30
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %1, align 4
  %33 = load i32, i32* %1, align 4
  ret i32 %33
}

declare dso_local i32 @critical_enter(...) #1

declare dso_local i64 @DPCPU_GET(i32) #1

declare dso_local i64 @mips_rd_count(...) #1

declare dso_local i32 @critical_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
